# grogu-cursor-chaser

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cursor.rs  force.rs  main.rs  windows_overlay.rs
src-tauri/wix/: main.wxs
src/assets/grogu/: README.md
src/behavior/: motion.ts  stateMachine.ts
src/renderer/: groguRig.ts
