[package]
name = "break-grogu"
version = "0.1.0"
description = "Grogu cursor chaser overlay"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1.8", features = [ "system-tray", "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Windows-only APIs for overlay styles + cursor input.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.39", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Graphics_Gdi",
  "Win32_UI_HiDpi"
] }
